# vcf2report

./: .env.example  .gitignore  LICENSE  README.md  claude_desktop_config.example.json  hpo_demo001.txt  pyproject.toml  vcf2report.md  video_captions.srt
docs/: ANNOTATION.md  ARCHITECTURE.md  BENCHMARK.md  COHORT_CONSTRUCTION.md  CONCORDANCE.md  DATA_ARCHITECTURE.md  DEMO_SCRIPT.md  DISCLAIMERS.md  EXAMPLE_REPORT_SYN-001.md  GROUND_TRUTH_PANEL.md  HOW_IT_WORKS.md  LOCAL_ANNOTATION.md  PHENOPACKET.md  SETUP.md  SYNTHETIC_CASES.md
scripts/: adversarial_cohort.py  annotate_syn_cohort.sh  annotate_vcf.sh  bake_spiked_gnomad.py  build_alphamissense_parquet.py  build_clinvar_local.py  build_clinvar_parquet.py  build_concordance_panel.py  build_dragen_exome.py  build_exome_bed.py  build_gnomad_local.py  build_gnomad_parquet.py  build_hpo_graph.py  build_real_exome.py  build_sample_vcf.py  build_truth_panel.py  build_v2_biallelic.py  check_stores.py  fetch_alphamissense.sh  fetch_benchmark.sh  fetch_clingen_hi.sh  fetch_clinvar_parquet.sh  fetch_clinvar_residue.py  fetch_constraint.py  fetch_gnomad_parquet.sh  fetch_hpo.py  fetch_syn_cohort.sh  fetch_syn_cohort_v2.sh  fetch_syn_expansion.sh  fill_hpo_sidecars.py  freeze_alphamissense.py  freeze_clinvar_residue.py  inspect_vcf.py  liftover_to_grch38.py  make_annotated_example.py  make_syn_cohort.sh  make_synthetic_exomes.sh  phenopacket_to_inputs.py  preflight.py  publish_clinvar_parquet.sh  (+21 more)
templates/: report.md.j2
tests/: conftest.py  test_acmg_model.py  test_acmg_rules.py  test_alphamissense_v2.py  test_am_prime.py  test_annotate_fallback.py  (+40 more)
(+103 files in other folders)
